major pipeline draft remodelling (of channels). WIP: updating test JSONs